fix(#37): Wrong alignment on Chromium

--- a/services/files/front/components/chat-room-message/chat-room-message.css
+++ b/services/files/front/components/chat-room-message/chat-room-message.css
@@ -2,7 +2,6 @@
     display: grid;
     grid-template: 1.5em 1.5em 1fr / 60px 1fr;
     gap: 0 10px;
-    align-items: baseline;
 
     border-radius: 10px;
     padding: 5px 15px;
